--- a/style_tablet.css
+++ b/style_tablet.css
@@ -2,20 +2,29 @@
 
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 
+    :root {
+        --background: #DEE2E6;
+        --black: #212529;
+        --white: #F8F9FA;
+        --blue: #0553B1; 
+        --shadow: #0000002e;
+        --pop-delay: 0.0s;
+    }
+
     html {
         scroll-behavior: smooth;
     }
 
     body {
         margin: 0;
-        background-color: #DEE2E6;
+        background-color: var(--background);
         user-select: none;
     }
 
     h1 {
         font-weight: bold;
         margin: 0;
-        color: #212529;
+        color: var(--black);
         padding-top: 15vh;
         font-size: 35px;
         font-family: Orbitron;
@@ -24,16 +33,19 @@
 
     h2 {
         font-size: 30px;
+        color: var(--black);
         font-family: Orbitron;
     }
 
     h3 {
         font-size: 25px;
+        color: var(--black);
         font-family: Arial, Helvetica, sans-serif;
     }
 
     p {
         font-size: 20px;
+        color: var(--black);
         font-family: Arial, Helvetica, sans-serif;
     }
 
@@ -84,7 +96,7 @@
         left: 0;
         z-index: 999999;
         transition: .5s;
-        background: #0553B1;
+        background: var(--blue);
     }
 
     .ulMobile {
@@ -97,7 +109,7 @@
         font-size: 1.5rem;
         padding: 30px;
         text-decoration: none;
-        color: #F8F9FA;
+        color: var(--white);
         width: 12em;
         display: inline-block;
     }
@@ -105,7 +117,7 @@
     .menuBurgerBackground {
         width: 100%;
         height: 10vh;
-        background-color: #0553B1;
+        background-color: var(--blue);
         text-align: center;
         position: fixed;
         z-index: 2;
@@ -126,7 +138,7 @@
     .menuBurger span {
         width: 100%;
         height: 4px;
-        background: #F8F9FA;
+        background: var(--white);
         display: block;
     }
 
@@ -167,7 +179,7 @@
         display: block;
         height: 2px;
         position: absolute;
-        background: #F8F9FA;
+        background: var(--white);
         transition: width 0.3s ease 0s, left 0.3s ease 0s;
         width: 0;
       }
@@ -189,7 +201,7 @@
     }
 
     .title {
-        color: #212529;
+        color: var(--black);
         text-align: center;
     }
 
@@ -199,7 +211,7 @@
 
     .title>a {
         text-decoration: none;
-        color: #212529;
+        color: var(--black);
     }
 
     .title svg {
@@ -207,13 +219,12 @@
     }
 
     .title svg:hover {
-        color: #0553B1;
+        color: var(--blue);
     }
 
     /*----- PRESENTATION -----*/
 
     .presentation {
-        background-color: rgb(255 255 255);
         padding: 2% 5% 2% 5%;
     }
 
@@ -221,13 +232,19 @@
         text-align: center;
     }
 
-    .avatar {
+    .avatar_container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 5%;
+    }
+
+    .avatar_background {
         width: 200px;
         height: 200px;
-        margin-top: 5%;
         border-radius: 50%;
-        border: 5px solid #0553B1;
-        background-color: #E9ECEF;
+        border: 5px solid var(--blue);
+        background-color: var(--white);
         box-shadow: 
         rgba(0, 0, 0, 0.25) 0px 54px 55px,
         rgba(0, 0, 0, 0.12) 0px -12px 30px,
@@ -236,13 +253,25 @@
         rgba(0, 0, 0, 0.09) 0px -3px 5px;
     }
 
+    .avatar {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        filter: grayscale(1);
+        transition: 0.5s;
+    }
+
+    .avatar:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+
     .presentation_txt {
         margin: 5% 10% 5% 10%;
     }
 
     .presentation_txt>p {
-        color: #212529;
-        text-align: justify;
+        color: var(--black);
     }
 
      /*----- DOWNLOAD BUTTON -----*/
@@ -261,18 +290,18 @@
         transition: 0.5s;
         text-decoration: none;
         text-transform: uppercase;
-        background-color: #0553B1;
-        color: #DEE2E6;
-        border: 1px solid #0553B1;
+        background-color: var(--blue);
+        color: var(--white);
+        border: 1px solid var(--blue);
         user-select: none;
     }
 
     .download_btn>a:hover {
         transition: 0.5s;
         border-radius: 100px;
-        background-color: #E9ECEF;
-        border: 1px solid #0553B1;
-        color: #0553B1;
+        background-color: var(--background);
+        border: 1px solid var(--blue);
+        color: var(--blue);
     }
 
     /*----- COMPETENCES -----*/
@@ -287,7 +316,7 @@
     .skills_toggle {
         width: 50%;
         display: flex;
-        background-color: #0553B1;
+        background-color: var(--blue);
         border-radius: 100px;
         justify-content: space-around;
     }
@@ -297,14 +326,14 @@
         text-align: center;
         padding: 1%;
         font-weight: bold;
-        color: #F8F9FA;
+        color: var(--white);
         border-radius: 100px;
         cursor: pointer;
         user-select: none;
     }
 
     .skills_toggle_select {
-        background-color: #F8F9FA;
+        background-color: var(--white);
         animation: skill_pop 0.3s linear 1;
     }
 
@@ -320,7 +349,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        margin-top: 5vh;
+        margin-top: 10vh;
         margin-bottom: 10vh;
     }
 
@@ -336,7 +365,7 @@
         padding: 2%;
         margin: 1%;
         background-color: whitesmoke;
-        box-shadow: 0 3px 5px #0000002e;
+        box-shadow: 0 3px 5px var(--shadow);
         border-radius: 10px;
     }
 
@@ -355,8 +384,8 @@
         bottom: 120%;
         left: 50%;
         margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
-        background-color: #0553B1;
-        color: #fff;
+        background-color: var(--blue);
+        color: var(--white);
         text-align: center;
         border-radius: 6px;
         padding: 5px 0;
@@ -426,7 +455,7 @@
         padding: 2%;
         margin: 2%;
         background-color: whitesmoke;
-        box-shadow: 0 3px 5px #0000002e;
+        box-shadow: 0 3px 5px var(--shadow);
         border-radius: 10px;
     }
 
@@ -464,7 +493,6 @@
 
     .experience_desc {
         margin: 2%;
-        text-align: justify;
     }
 
      /*----- PROJETS -----*/
@@ -507,7 +535,7 @@
         margin-left: 2%;
         margin-right: 2%;
         background-color: whitesmoke;
-        box-shadow: 0 3px 5px #0000002e;
+        box-shadow: 0 3px 5px var(--shadow);
         border-radius: 10px;
     }
     
@@ -534,17 +562,16 @@
     }
 
     .project_label>span {
-        background-color: #DEE2E6;
+        background-color: var(--white);
         border-radius: 10px;
-        color: #212529;
+        color: var(--black);
         padding: 1% 2% 1% 2%;
-        box-shadow: 0 3px 5px #0000002e;
+        box-shadow: 0 3px 5px var(--shadow);
         font-weight: bold;
     }
 
     .project_desc {
         margin: 3%;
-        text-align: justify;
     }
 
     .project_more {
@@ -562,9 +589,9 @@
         transition: 0.5s;
         text-decoration: none;
         text-transform: uppercase;
-        background-color: #0553B1;
-        color: #DEE2E6;
-        border: 1px solid #0553B1;
+        background-color: var(--blue);
+        color: var(--white);
+        border: 1px solid var(--blue);
         font-weight: bold;
         user-select: none;
     }
@@ -573,8 +600,8 @@
         transition: 0.5s;
         border-radius: 100px;
         background-color: whitesmoke;
-        border: 1px solid #0553B1;
-        color: #0553B1;
+        border: 1px solid var(--blue);
+        color: var(--blue);
     }
 
     .hidden_projects_btn_container {
@@ -587,6 +614,10 @@
         width: 40%;
     }
 
+    .hidden_projects_btn_container>a:hover {
+        background-color: var(--background);
+    }
+
     .hidden_projects_btn {
         cursor: pointer;
         user-select: none;
@@ -596,7 +627,7 @@
 
     .project_content {
         padding: 5%;
-        color: #212529;
+        color: var(--black);
     }
 
     .project_content_container {
@@ -610,14 +641,6 @@
 
     .project_content_img>img {
         width: 100%;
-    }
-
-    .project_content_text {
-        text-align: justify;
-    }
-
-    .project_content_smartphone_text {
-        text-align: justify;
     }
 
     .smartphone {
@@ -670,8 +693,8 @@
         width: 100%;
         left: 0;
         bottom: 0;
-        background-color: #0553B1;
-        color: #F8F9FA;
+        background-color: var(--blue);
+        color: var(--white);
         text-align: center;
         padding-top: 2%;
     }
@@ -692,18 +715,15 @@
     }
 
     .mail svg:hover {
-        /*color: black;*/
-        color: rgb(216, 99, 42);
+        color: var(--black);
     }
 
     .linkedin svg:hover {
-        /*color: #0077B5;*/
-        color: rgb(216, 99, 42);
+        color: var(--black);
     }
 
     .github svg:hover {
-        /*color: #24292e;*/
-        color: rgb(216, 99, 42);
+        color: var(--black);
     }
 
 }
