--- a/style_tablet.css
+++ b/style_tablet.css
@@ -619,6 +619,51 @@
         user-select: none;
     }
 
+    /*----- PROJECT POPUP -----*/
+
+    /* Background de la popup */
+    .overlay {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0.7);
+        transition: opacity 500ms;
+        visibility: hidden;
+        opacity: 0;
+    }
+  
+    /* Afficher l'overlay */
+    .overlay:target {
+        visibility: visible;
+        opacity: 1;
+    }
+  
+    .popup {
+        margin: 120px auto;
+        padding: 20px;
+        background: #fff;
+        border-radius: 5px;
+        width: 50%;
+        height: 80vh;
+        position: relative;
+    }
+
+    .content {
+        text-align: center;
+    }
+  
+    .popup .close {
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        font-size: 30px;
+        font-weight: bold;
+        text-decoration: none;
+        color: red;
+    }
+
     /*----- PROJET CONTENT -----*/
 
     .project_content {
@@ -637,6 +682,12 @@
 
     .project_content_img>img {
         width: 100%;
+    }
+
+    .smartphone_container {
+        width: 100%;
+        justify-content: center;
+        display: flex;
     }
 
     .smartphone {
