--- a/style_desktop.css
+++ b/style_desktop.css
@@ -553,6 +553,7 @@
 
     /* Background de la popup */
     .overlay {
+        z-index: 3;
         position: fixed;
         top: 0;
         bottom: 0;
@@ -569,22 +570,8 @@
         visibility: visible;
         opacity: 1;
     }
-  
-    .popup {
-        margin: 120px auto;
-        padding: 20px;
-        background: #fff;
-        border-radius: 5px;
-        width: 30%;
-        height: 80vh;
-        position: relative;
-    }
 
-    .content {
-        text-align: center;
-    }
-  
-    .popup .close {
+    .overlay>a {
         position: absolute;
         top: 20px;
         right: 30px;
@@ -592,6 +579,9 @@
         font-weight: bold;
         text-decoration: none;
         color: red;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
   }
 
     /*----- PROJET CONTENT -----*/
@@ -616,7 +606,6 @@
     }
 
     .smartphone_container {
-        width: 100%;
         justify-content: center;
         display: flex;
     }
@@ -626,7 +615,7 @@
         width: 300px;
         height: 550px;
         margin: 50px;
-        border: 5px var(--black) solid;
+        border: 5px black solid;
         border-top-width: 60px;
         border-bottom-width: 60px;
         border-radius: 36px;
@@ -662,7 +651,7 @@
       
       /* The screen (or content) of the device */
       .smartphone .content {
-        background: var(--black);
+        background: black;
       }
 
     /*----- FOOTER -----*/
