--- a/style_tablet.css
+++ b/style_tablet.css
@@ -623,6 +623,7 @@
 
     /* Background de la popup */
     .overlay {
+        z-index: 3;
         position: fixed;
         top: 0;
         bottom: 0;
@@ -639,22 +640,8 @@
         visibility: visible;
         opacity: 1;
     }
-  
-    .popup {
-        margin: 120px auto;
-        padding: 20px;
-        background: #fff;
-        border-radius: 5px;
-        width: 50%;
-        height: 80vh;
-        position: relative;
-    }
 
-    .content {
-        text-align: center;
-    }
-  
-    .popup .close {
+    .overlay>a {
         position: absolute;
         top: 20px;
         right: 30px;
@@ -662,6 +649,9 @@
         font-weight: bold;
         text-decoration: none;
         color: red;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
     }
 
     /*----- PROJET CONTENT -----*/
