Revert "FIX some pb"
This reverts commit a64d696e20e92b625f2fbe5233f07e1a881cc602.

--- a/style_desktop.css
+++ b/style_desktop.css
@@ -553,7 +553,6 @@
 
     /* Background de la popup */
     .overlay {
-        z-index: 3;
         position: fixed;
         top: 0;
         bottom: 0;
@@ -570,8 +569,22 @@
         visibility: visible;
         opacity: 1;
     }
+  
+    .popup {
+        margin: 120px auto;
+        padding: 20px;
+        background: #fff;
+        border-radius: 5px;
+        width: 30%;
+        height: 80vh;
+        position: relative;
+    }
 
-    .overlay>a {
+    .content {
+        text-align: center;
+    }
+  
+    .popup .close {
         position: absolute;
         top: 20px;
         right: 30px;
@@ -579,9 +592,6 @@
         font-weight: bold;
         text-decoration: none;
         color: red;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 10px;
   }
 
     /*----- PROJET CONTENT -----*/
@@ -606,6 +616,7 @@
     }
 
     .smartphone_container {
+        width: 100%;
         justify-content: center;
         display: flex;
     }
@@ -615,7 +626,7 @@
         width: 300px;
         height: 550px;
         margin: 50px;
-        border: 5px black solid;
+        border: 5px var(--black) solid;
         border-top-width: 60px;
         border-bottom-width: 60px;
         border-radius: 36px;
@@ -651,7 +662,7 @@
       
       /* The screen (or content) of the device */
       .smartphone .content {
-        background: black;
+        background: var(--black);
       }
 
     /*----- FOOTER -----*/
