--- a/style_mobile.css
+++ b/style_mobile.css
@@ -589,7 +589,6 @@
 
     /* Background de la popup */
     .overlay {
-        z-index: 3;
         position: fixed;
         top: 0;
         bottom: 0;
@@ -606,8 +605,22 @@
         visibility: visible;
         opacity: 1;
     }
+  
+    .popup {
+        margin: 120px auto;
+        padding: 20px;
+        background: #fff;
+        border-radius: 5px;
+        width: 80%;
+        height: 80vh;
+        position: relative;
+    }
 
-    .overlay>a {
+    .content {
+        text-align: center;
+    }
+  
+    .popup .close {
         position: absolute;
         top: 20px;
         right: 30px;
@@ -615,9 +628,6 @@
         font-weight: bold;
         text-decoration: none;
         color: red;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 10px;
     }
 
     /*----- PROJET CONTENT -----*/
@@ -640,7 +650,6 @@
     }
 
     .smartphone_container {
-        margin-top: 10vh;
         width: 100%;
         justify-content: center;
         display: flex;
