--- a/style_desktop.css
+++ b/style_desktop.css
@@ -183,8 +183,8 @@
     }
 
     .avatar_container {
-        width: 500px;
-        height: 500px;
+        width: 400px;
+        height: 400px;
         border-radius: 50%;
         border: 5px solid var(--blue);
         background-color: var(--white);
@@ -197,8 +197,8 @@
     }
 
     .avatar {
-        width: 500px;
-        height: 500px;
+        width: 400px;
+        height: 400px;
         border-radius: 50%;
         filter: grayscale(1);
         transition: 0.5s;
@@ -442,11 +442,9 @@
     @keyframes project_pop {
         0%  {
             transform: scale(0.5);
-            opacity: 0%;
         }
         100% {
             transform: scale(1);
-            opacity: 100%;
         }
     }
 
@@ -531,6 +529,10 @@
         color: var(--blue);
     }
 
+    .disabled>a {
+        cursor: not-allowed;
+    }
+
     .hidden_projects_btn_container {
         width: 100%;
         display: flex;
@@ -556,6 +558,10 @@
         color: var(--black);
     }
 
+    .project_content>h1 {
+        text-align: left;
+    }
+
     .project_content_container {
         display: flex;
         gap: 5em;
@@ -568,6 +574,10 @@
 
     .project_content_img>img {
         width: 100%;
+    }
+
+    .project_content_smartphone_text>p {
+        margin-bottom: 5%;
     }
 
     .smartphone {
