--- a/style_desktop.css
+++ b/style_desktop.css
@@ -353,27 +353,20 @@
 
     /*----- EXPERIENCES -----*/
 
-    .experiences {
-        margin-bottom: 10vh;
-    }
-
     .experiences_container {
         width: 100%;
-        height: 120vh;
+        height: 200vh;
         display: flex;
         justify-content: center;
-        margin-top: 5vh;
-        margin-bottom: 5vh;
     }
 
     .line {
-        position: absolute;
         background-color: var(--black);
         width: 5px;
-        height: 120vh;
+        height: 100%;
     }
 
-    .circle {
+    .bullet {
         position: absolute;
         background-color: var(--black);
         width: 30px;
@@ -381,10 +374,22 @@
         border-radius: 50%;
     }
 
-    .experience_box {
-        width: 700px;
-        height: 400px;
-        padding: 2%;
+    .bullet_exp_1 {
+        margin-top: 10%;
+    }
+    
+    .bullet_exp_2 {
+        margin-top: 40%;
+    }
+
+    .bullet_exp_3 {
+        margin-top: 70%; 
+    }
+
+    .exp_box {
+        position: absolute;
+        width: 35%;
+        padding: 4%;
         margin: 2%;
         background-color: whitesmoke;
         box-shadow: 0 3px 5px var(--shadow);
@@ -392,11 +397,18 @@
     }
 
     .exp1 {
-        margin-top: 20vh;
+        margin-top: 10%;
+        left: 0;
     }
 
     .exp2 {
-        margin-top: 80vh;
+        margin-top: 40%;
+        right: 0;
+    }
+
+    .exp3 {
+        margin-top: 70%;
+        left: 0;
     }
 
     .experience_header {
@@ -406,7 +418,7 @@
     }
 
     .experience_header img {
-        height: 10vh;
+        height: 8vh;
     }
 
     .experience_title {
@@ -422,10 +434,6 @@
     }
 
     /*----- PROJETS -----*/
-
-    .projects {
-        margin-top: 20%;
-    }
 
     .projects_list {
         width: 100%;
