--- a/style_mobile.css
+++ b/style_mobile.css
@@ -411,32 +411,40 @@
 
     /*----- EXPERIENCES -----*/
 
-    .experiences {
-        margin-bottom: 10vh;
-    }
-
     .experiences_container {
         width: 100%;
+        height: 150vh;
+        display: flex;
         justify-content: center;
-        margin-top: 5vh;
-        margin-bottom: 5vh;
     }
 
     .line {
         display: none;
     }
 
-    .circle {
+    .bullet {
         display: none;
     }
 
-    .experience_box {
+    .exp_box {
+        position: absolute;
         align-content: center;
-        height: 80%;
         margin: 5%;
         background-color: whitesmoke;
         box-shadow: 0 3px 5px var(--shadow);
         border-radius: 10px;
+    }
+
+    .exp1 {
+        margin-top: 10vh;
+    }
+
+    .exp2 {
+        margin-top: 50vh;
+    }
+
+    .exp3 {
+        margin-top: 90vh;
     }
 
     .experience_header {
