--- a/style_tablet.css
+++ b/style_tablet.css
@@ -416,39 +416,43 @@
 
     /*----- EXPERIENCES -----*/
 
-    .experiences {
-        margin-bottom: 10vh;
-    }
-
     .experiences_container {
         width: 100%;
-        height: 150vh;
+        height: 200vh;
         display: flex;
         justify-content: center;
-        margin-top: 5vh;
-        margin-bottom: 5vh;
     }
 
     .line {
-        position: absolute;
-        background-color: black;
+        background-color: var(--black);
         width: 5px;
-        height: 150vh;
+        height: 100%;
     }
 
-    .circle {
+    .bullet {
         position: absolute;
-        background-color: black;
+        background-color: var(--black);
         width: 30px;
         height: 30px;
         border-radius: 50%;
     }
 
-    .experience_box {
-        align-content: center;
-        width: 700px;
-        height: 400px;
-        padding: 2%;
+    .bullet_exp_1 {
+        margin-top: 10%;
+    }
+    
+    .bullet_exp_2 {
+        margin-top: 70%;
+    }
+
+    .bullet_exp_3 {
+        margin-top: 130%; 
+    }
+
+    .exp_box {
+        position: absolute;
+        width: 35%;
+        padding: 4%;
         margin: 2%;
         background-color: whitesmoke;
         box-shadow: 0 3px 5px var(--shadow);
@@ -456,22 +460,28 @@
     }
 
     .exp1 {
-        margin-top: 20vh;
+        margin-top: 10%;
+        left: 0;
     }
 
     .exp2 {
-        margin-top: 100vh;
+        margin-top: 70%;
+        right: 0;
+    }
+
+    .exp3 {
+        margin-top: 130%;
+        left: 0;
     }
 
     .experience_header {
         display: flex;
         width: 100%;
-        margin: 2%;
         justify-content: space-between;
     }
 
     .experience_header img {
-        height: 10vh;
+        height: 5vh;
     }
 
     .experience_title {
@@ -482,13 +492,8 @@
 
     .experience_subtitle {
         width: 100%;
-        text-align: center;
         margin-bottom: 1%;
         font-weight: bold;
-    }
-
-    .experience_desc {
-        margin: 2%;
     }
 
      /*----- PROJETS -----*/
