--- a/style_mobile.css
+++ b/style_mobile.css
@@ -414,7 +414,7 @@
     .experiences_container {
         width: 100%;
         height: 150vh;
-        display: flex;
+        /* display: flex; */
         justify-content: center;
     }
 
@@ -427,24 +427,13 @@
     }
 
     .exp_box {
-        position: absolute;
+        /* position: absolute; */
         align-content: center;
         margin: 5%;
         background-color: whitesmoke;
         box-shadow: 0 3px 5px var(--shadow);
         border-radius: 10px;
-    }
-
-    .exp1 {
-        margin-top: 10vh;
-    }
-
-    .exp2 {
-        margin-top: 50vh;
-    }
-
-    .exp3 {
-        margin-top: 90vh;
+        margin-bottom: 5vh;
     }
 
     .experience_header {
